# kafkalite

./: .gitignore  Database-Kafkar-Types.html  Database-Kafkar.html  LICENSE  README.md  doc-index.html  index-frames.html  index.html  kafkalite.cabal  kafkar.cabal  kafkar.haddock  kafkar.txt  mini_Database-Kafkar-Types.html  mini_Database-Kafkar.html  stack.yaml
example/: Main.hs
src/: Codec-Compression-GZip-Extras.html  Codec-Compression-Snappy-Extras.html  Data-Attoparsec-ByteString-Extras.html  Database-Kafkar-Compression.html  Database-Kafkar-Parsers.html  Database-Kafkar-Types.html  Database-Kafkar-Util.html  Database-Kafkar.html
src/Codec/Compression/GZip/: Extras.hs
src/Codec/Compression/Snappy/: Extras.hs
src/Data/Attoparsec/ByteString/: Extras.hs
src/Database/: Kafkalite.hs  Kafkar.hs
src/Database/Kafkalite/: Binary.hs  Class.hs  Compression.hs  Stream.hs  Types.hs  Util.hs
src/Database/Kafkalite/Backend/: FileSystem.hs  Tar.hs
src/Database/Kafkar/: Binary.hs  Compression.hs  Parsers.hs  Reader.hs  Stream.hs  Types.hs  Util.hs
tests/: Main.hs
tests/test-data/fs-golden/: numbers-0
tests/test-data/golden/: hamlet-none-0
