name:                kafkalite
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
author:              Alex Sayers <alex.sayers@gmail.com>
maintainer:          Alex Sayers <alex.sayers@gmail.com>
copyright:           (c) Alex Sayers 2016
homepage:            https://github.com/asayers/kafkalite
bug-Reports:         https://github.com/asayers/kafkalite/issues
category:            Database
synopsis:            Read-only support for the Kafka on-disk format
description:
        .
        Consume your Kafka streams without spinning up the JVM!
        .
        This package is designed to address the case where you have a bunch of
        Kafka streams stored on a local disk, and want to consume them without
        having to start a Kafka instance. It presents a read-only streaming
        interface to your kafka topics, and handles efficient seeking and
        decompression. Note that new messages may take a while to show in the
        log files.
        .
        This package also contains an example program, which simply streams
        kafka topics to stdout.

cabal-version:       >=1.10
build-type:          Simple
extra-source-files:
    README.md

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
      Database.Kafkalite
  other-modules:
      Codec.Compression.GZip.Extras
      Database.Kafkalite.Binary
      Database.Kafkalite.Compression
      Database.Kafkalite.Stream
      Database.Kafkalite.Types
      Database.Kafkalite.Util
  build-depends:
        base >=4.8 && <4.9
      , binary >= 0.8.1
      , bytestring
      , digest
      , directory >= 1.2.5
      , exceptions
      , filepath
      , hashable
      , pipes
      , pipes-binary
      , pipes-bytestring
      , pipes-parse
      , pipes-safe >= 2.2
      , snappy-framed
      , transformers
      , vector
      , vector-space
      , vector-th-unbox
      , zlib

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:
        base >=4.8 && <4.9
      , bytestring
      , directory >= 1.2.5
      , kafkalite
      , pipes
      , pipes-safe
      , pipes-text
      , tasty >= 0.7
      , tasty-golden
      , text

executable kafkalite-example
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:
        base >=4.8 && <4.9
      , kafkalite
      , optparse-applicative
      , pipes
      , pipes-safe
